[package]
name = "autoit_wrapper"
version = "0.1.0"
description = "call autoit script in windows"
edition = "2021"
keywords = ["autoit3", "autoitx"]
repository = "https://github.com/Northofqing/autoit_wrapper"
license = "Apache-2.0"

[dependencies]
libloading = "0.8"
lazy_static = "1.5"
 
[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation"
]

